--- a/long.html
+++ b/long.html
@@ -1,7 +1,6 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Code Golf</title>
   </head>
   <body>
@@ -19,9 +18,9 @@
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
         if (x > canvas.width){
-        x = -20;
+          x = -20;
         } else {
-        x = x + 2;
+          x = x + 2;
         }
 
         ctx.fillRect(x, 20, 20, 20);
