--- a/long.html
+++ b/long.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Code Golf</title>
   </head>
   <body>
@@ -14,6 +15,8 @@
 
       let x = 0;
 
+      loop();
+
       function loop() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -26,8 +29,6 @@
         ctx.fillRect(x, 20, 20, 20);
         requestAnimationFrame(loop);
       }
-
-      loop();
     </script>
   </body>
 </html>
